--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,13 @@ Dark green: #28b485
   /* width and height specifications now include any paddings or borders */
   box-sizing: border-box;
 }
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+
+  /* 1.7x bigger than pre-defined line height */
+  line-height: 1.7;
+  color: #777;
+}
