--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,9 @@ body {
   left: 50%;
   /* positions in relation to self; moves left 50% of div width from left side, moves up 40% of div height from top*/
   transform: translate(-50%, -50%); 
+
+  /* centers .btn link */
+  text-align: center;
 }
 
 .heading-primary {
@@ -82,6 +85,8 @@ body {
   /* 'hack' that supposedly eliminates minute 'shake' of animation towards its end */
   /* note: this may be unecessary; no visible shake in my brower viewing */
   backface-visibility: hidden;
+
+  margin-bottom: 60px;
 }
 
 /* just a test */
@@ -96,6 +101,7 @@ body {
   letter-spacing: 35px;
 
   /* applies animation specified in @keyframes list of same name */
+  /* animation shorthand groups all 3 of the below together */
   animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-out;
@@ -155,9 +161,40 @@ body {
 
 /* pseudo-class; special state of .btn selector */ 
 /* below are both location pseudo classes */
-/* :link styles  */
+/* :link styles a link that hasn't been interacted with; :visited styles ones that have been clicked  */
+/* can use :any-link to style both :link and :visited */
 /* styling :link and :visited together make links look the same before and after clicks */
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+
+  /* using this property allows the box model to work on this element (as it does automatically for block elements, not inline elements */
+  /* element no longer overlaps with above h1 */
+  display: inline-block;
+
+  border-radius: 100px;
+
+  /* individual properties can be specified */
+  /* must be applied to initial state */
+  transition: all .2s;
+  
+}
+
+/* psuedo-class for when mouse hovers over link */
+.btn:hover {
+  /* moves element up 3px */
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 7px rgba(0, 0, 0, .2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
 }
