modify HTML element classes to conform to BEM naming styling

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ Dark green: #28b485
 
 */
 
+
+/* the universal selector by itself does not include pseudo-elements */
 *,
 *::after,
 *::before {
@@ -24,7 +26,7 @@ html {
   /* browser default font-size is 16px; 62.5% of 16 is 10 */
   /* technique: setting root font to 10px makes it easy to mentally convert px to/from rem */
 
-  font-size: 62.5%; 
+  font-size: 62.5%;
 }
 
 body {
