--- a/css/style.css
+++ b/css/style.css
@@ -65,14 +65,14 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
   /* when set to absolute and parent set to relative, positioning properties (top, left, etc.) refer to distance of sides of parent element. If parent is not set to relative, positioning properties will refer to body */
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
 
-.logo {
+.header__logo {
   /* width will automatically scale proportionally */
   height: 3.5rem; 
 }
@@ -83,7 +83,7 @@ body {
   animation: moveInRight 1s ease-out; 
 } */
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -110,7 +110,7 @@ body {
   animation: moveInRight 1s ease-out; 
 } */
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
@@ -129,7 +129,7 @@ body {
   /* animation-delay: 3s; */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
@@ -226,7 +226,7 @@ body {
   box-shadow: 0 .5rem .7rem rgba(0, 0, 0, .2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -250,7 +250,7 @@ body {
   transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color:#fff;
 }
 
@@ -263,7 +263,7 @@ body {
 } 
 
 /* applied only to header button */
-.btn-animated {
+.btn--animated {
   /* @keyframes list reference */
   animation: moveInBottom .5s ease-out .4s;
 
