add 7-1 folder system and divided sstarted code between new partial files

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* scss knows that base refers to _base.scss */
 /* the universal selector by itself does not include pseudo-elements */
 *,
 *::after,
