--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,14 @@
 /* scss knows that base refers to _base.scss */
+/*
+=========
+  COLORS
+=========
+*/
+/*
+=========
+  GRID
+=========
+*/
 /* need to name keyframes list */
 @keyframes moveInLeft {
   /* can specify any percentage position of point in duration */
@@ -152,6 +162,23 @@ body {
     animation: moveInBottom .5s ease-out .4s;
     /* applies the styles at the 0% position of specified @keyframes list to element at start of animation; accomodates for delay of animation */
     animation-fill-mode: backwards; }
+
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2);
+    background-color: orangered;
+    float: left; }
+    .row .col-1-of-2:not(:last-child) {
+      margin-right: 6rem; }
 
 .header {
   /* sets to 95% of the viewport height */
