--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -11,12 +11,10 @@
     margin-bottom: $gutter-vertical;
   }
 
-  // mixin for clearfix hack  
+  // referencing a mixin for clearfix hack  
   @include clearfix;
 
-  .col-1-of-2 {
-    // variable has to be interpolated within calc function
-    width: calc((100% - #{$gutter-horizontal}) / 2);
+  [class^="col-"] {
     background-color: orangered;
     float: left;
 
@@ -26,5 +24,28 @@
     }
   }
 
-  
+  .col-1-of-2 {
+    // variable has to be interpolated within calc function
+    width: calc((100% - #{$gutter-horizontal}) / 2);
+  }
+
+  .col-1-of-3 {
+    width: calc((100% - #{$gutter-horizontal} * 2) / 3);
+  }
+
+  .col-2-of-3 {
+    width: calc(2 * ((100% - #{$gutter-horizontal} * 2) / 3) + #{$gutter-horizontal});
+  }
+
+  .col-1-of-4 {
+    width: calc((100% - #{$gutter-horizontal} * 3) / 4);
+  }
+
+  .col-2-of-4 {
+    width: calc(2 * ((100% - #{$gutter-horizontal} * 3) / 4) + #{$gutter-horizontal});
+  }
+
+  .col-3-of-4 {
+    width: calc(3 * ((100% - #{$gutter-horizontal} * 3) / 4) + #{$gutter-horizontal} * 2);
+  }
 }
