add section-about styling to _home.scss and heading-secondary styling to _typography.scss

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -57,3 +57,10 @@ body {
   //   animation: moveInRight 1s ease-out; 
   // } 
 }
+
+.heading-secondary {
+  // i.e. 35px
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-size: 700;
+}
