--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,9 @@ html {
   /* technique: setting root font to 10px makes it easy to mentally convert px to/from rem */
   font-size: 62.5%; }
 
-  /* this has been commented out becuase I think it already occurs in the _base.scss file */
-/* body { */
+body {
   /* width and height specifications now include any paddings or borders */
-  /* box-sizing: border-box; } */
+  box-sizing: border-box; }
 
 body {
   /* font styling for child elements to inherit */
@@ -103,6 +102,11 @@ body {
     /* @keyframes list, duration, timing function */
     /* occurs at page load */
     animation: moveInRight 1s ease-out; }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-size: 700; }
 
 .btn {
   /* pseudo-class; special state of .btn selector */
@@ -163,7 +167,6 @@ body {
     animation: moveInBottom .5s ease-out .4s;
     /* applies the styles at the 0% position of specified @keyframes list to element at start of animation; accomodates for delay of animation */
     animation-fill-mode: backwards; }
-
 
 .row {
   max-width: 114rem;
@@ -229,4 +232,5 @@ body {
 
 .section-about {
   background-color: #f7f7f7;
-  padding: 25rem 0; }
+  padding: 25rem 0;
+  margin-top: -20vh; }
