Center h2 with utility class
Wrapped the heading-secondary h2 in a utility class div for centering. Added first utlity class styling in _utilities.scss for .u-center-text.

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,20 @@ body {
 .heading-secondary {
   font-size: 3.5rem;
   text-transform: uppercase;
-  font-size: 700; }
+  font-size: 700;
+  color: transparent;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-clip: text;
+  -webkit-background-clip: text;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.u-center-text {
+  text-align: center; }
 
 .btn {
   /* pseudo-class; special state of .btn selector */
