Add another utility class for margin bottom
Added u-margin-bottom-8 utility class to apply to h2 element and _utilities.scss file. Deleted color definitions of _grid.scss file.

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,9 @@ body {
 .u-center-text {
   text-align: center; }
 
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
 .btn {
   /* pseudo-class; special state of .btn selector */
   /* below are both location pseudo classes */
@@ -183,7 +186,6 @@ body {
 
 .row {
   max-width: 114rem;
-  background-color: #eee;
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
@@ -192,7 +194,6 @@ body {
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    background-color: orangered;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
