--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -90,3 +90,18 @@ body {
     text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
   }
 }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+
+  // every child EXCEPT last-child
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
