--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,10 @@
 .u-center-text { text-align: center;}
 
-.u-margin-bottom-8 { margin-bottom: 8rem;}
+/*
+----------
+  margins
+----------
+*/
+.u-margin-bottom-small { margin-bottom: 2rem; }
+.u-margin-bottom-big { margin-bottom: 8rem; }
+
